--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,3 +17,17 @@ select {
     font-size: 18px;
     background-color: #eee;
 }
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+#qualification-info div, #qualification-info p {
+    margin: 0 25px 0 0;
+    float: left;
+}
+
+td {
+    border: 1px solid black;
+}
